--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vue-style-loader",
+  "name": "@hoth/vue-style-loader",
   "version": "4.1.2",
   "author": "Evan You",
   "description": "Vue.js style loader module for webpack",
   "repository": {
     "type": "git",
-    "url": "git@github.com:vuejs/vue-style-loader.git"
+    "url": "git@github.com:max-team/vue-style-loader.git"
   },
   "scripts": {
     "test": "jest",
